--- a/D3D12Training/D3D12Training.vcxproj
+++ b/D3D12Training/D3D12Training.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="D3DVertexBuffer.h" />
     <ClInclude Include="D3DVertexShader.h" />
     <ClInclude Include="GameIncludes.h" />
+    <ClInclude Include="json.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="tinyxml2.h" />
   </ItemGroup>
