--- a/D3D12Training/D3D12Training.vcxproj.filters
+++ b/D3D12Training/D3D12Training.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="D3DRayTracingScene.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
