--- a/D3D12Training/D3D12Training.vcxproj
+++ b/D3D12Training/D3D12Training.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="GameIncludes.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ShaderShared.h" />
     <ClInclude Include="tinyxml2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
