--- a/D3D12Training/D3D12Training.vcxproj.filters
+++ b/D3D12Training/D3D12Training.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="json.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="ShaderShared.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
