Added GameInputs file for handling keyboard inputs more easily + added gamepad vertically movement with triggers

--- a/D3D12Training/D3D12Training.vcxproj
+++ b/D3D12Training/D3D12Training.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="D3DTexture.cpp" />
     <ClCompile Include="D3DVertexBuffer.cpp" />
     <ClCompile Include="D3DVertexShader.cpp" />
+    <ClCompile Include="GameInputs.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_dx12.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_win32.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="D3DVertexBuffer.h" />
     <ClInclude Include="D3DVertexShader.h" />
     <ClInclude Include="GameIncludes.h" />
+    <ClInclude Include="GameInputs.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="imgui\backends\imgui_impl_dx12.h" />
     <ClInclude Include="imgui\backends\imgui_impl_win32.h" />
