Starting adding textures, now have to make upload buffer (i guess)

--- a/D3D12Training/D3D12Training.vcxproj
+++ b/D3D12Training/D3D12Training.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="D3DTexture.h" />
     <ClInclude Include="D3DVertexBuffer.h" />
     <ClInclude Include="D3DVertexShader.h" />
+    <ClInclude Include="DDS.h" />
     <ClInclude Include="GameIncludes.h" />
     <ClInclude Include="GameInputs.h" />
     <ClInclude Include="GameScene.h" />
