--- a/D3D12Training/D3D12Training.vcxproj.filters
+++ b/D3D12Training/D3D12Training.vcxproj.filters
@@ -1,222 +1,253 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Fichiers sources">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Fichiers de ressources">
+    <Filter Include="Resource files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\json">
+    <Filter Include="Header files">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    </Filter>
+    <Filter Include="Header files\json">
       <UniqueIdentifier>{d05704f9-3b8b-48e2-860a-2f0c9982305d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\tinyxml">
+    <Filter Include="Header files\tinyxml">
       <UniqueIdentifier>{5caff954-31a8-4634-85c4-936d1abd7c8f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers sources\tinyxml">
-      <UniqueIdentifier>{e9415eb9-467e-4c3a-8233-34b8a5b1226d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\imgui">
+    <Filter Include="Header files\imgui">
       <UniqueIdentifier>{b8191b07-c1ab-491f-8ab4-a0a0d0193af9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers sources\imgui">
-      <UniqueIdentifier>{2f2f24e9-0fc3-4680-a2bc-b6de1c7918b5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers sources\imgui\backends">
-      <UniqueIdentifier>{f2974a40-8a56-45cc-962a-406f2174ce7a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\imgui\backends">
+    <Filter Include="Header files\imgui\backends">
       <UniqueIdentifier>{5aafc6a2-0de1-443f-9657-a2f6b563775f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\dds">
+    <Filter Include="Header files\dds">
       <UniqueIdentifier>{406ed2ad-6fd4-455a-814f-768e3e6989c0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header files\pix">
+      <UniqueIdentifier>{dd3272bf-80a3-4a6a-acf8-636ff7144588}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="Source files\tinyxml">
+      <UniqueIdentifier>{e9415eb9-467e-4c3a-8233-34b8a5b1226d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source files\imgui">
+      <UniqueIdentifier>{2f2f24e9-0fc3-4680-a2bc-b6de1c7918b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source files\imgui\backends">
+      <UniqueIdentifier>{f2974a40-8a56-45cc-962a-406f2174ce7a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Dynamic Libraries">
+      <UniqueIdentifier>{59360c82-c906-471f-9be2-2daaa0bf572c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D3D12Training.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DRenderTarget.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DRenderTargetManager.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DMesh.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DVertexShader.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DVertexBuffer.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DIndexBuffer.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DConstantBuffer.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DBufferManager.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DPixelShader.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DShaderManager.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DDevice.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DDepthBuffer.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DRTShader.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DTexture.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DGenericBuffer.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="D3DRayTracingScene.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="GameScene.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="tinyxml2.cpp">
-      <Filter>Fichiers sources\tinyxml</Filter>
+      <Filter>Source files\tinyxml</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Fichiers sources\imgui</Filter>
+      <Filter>Source files\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\backends\imgui_impl_dx12.cpp">
-      <Filter>Fichiers sources\imgui\backends</Filter>
+      <Filter>Source files\imgui\backends</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Fichiers sources\imgui</Filter>
+      <Filter>Source files\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Fichiers sources\imgui</Filter>
+      <Filter>Source files\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>Fichiers sources\imgui</Filter>
+      <Filter>Source files\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Fichiers sources\imgui</Filter>
+      <Filter>Source files\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\backends\imgui_impl_win32.cpp">
-      <Filter>Fichiers sources\imgui\backends</Filter>
+      <Filter>Source files\imgui\backends</Filter>
     </ClCompile>
     <ClCompile Include="GameInputs.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3DRenderTarget.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DIncludes.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DRenderTargetManager.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DMesh.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DVertexShader.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DVertexBuffer.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DIndexBuffer.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DConstantBuffer.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DBufferManager.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DPixelShader.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DShaderManager.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="GameIncludes.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DDevice.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DDepthBuffer.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DRTShader.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DTexture.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DGenericBuffer.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="D3DRayTracingScene.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="ShaderShared.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="GameScene.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="json.hpp">
-      <Filter>Fichiers d%27en-tête\json</Filter>
+      <Filter>Header files\json</Filter>
     </ClInclude>
     <ClInclude Include="tinyxml2.h">
-      <Filter>Fichiers d%27en-tête\tinyxml</Filter>
+      <Filter>Header files\tinyxml</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui.h">
-      <Filter>Fichiers d%27en-tête\imgui</Filter>
+      <Filter>Header files\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\backends\imgui_impl_dx12.h">
-      <Filter>Fichiers d%27en-tête\imgui\backends</Filter>
+      <Filter>Header files\imgui\backends</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>Fichiers d%27en-tête\imgui</Filter>
+      <Filter>Header files\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>Fichiers d%27en-tête\imgui</Filter>
+      <Filter>Header files\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>Fichiers d%27en-tête\imgui</Filter>
+      <Filter>Header files\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>Fichiers d%27en-tête\imgui</Filter>
+      <Filter>Header files\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\backends\imgui_impl_win32.h">
-      <Filter>Fichiers d%27en-tête\imgui\backends</Filter>
+      <Filter>Header files\imgui\backends</Filter>
     </ClInclude>
     <ClInclude Include="GameInputs.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="DDS.h">
-      <Filter>Fichiers d%27en-tête\dds</Filter>
+      <Filter>Header files\dds</Filter>
     </ClInclude>
+    <ClInclude Include="pix\pix3.h">
+      <Filter>Header files\pix</Filter>
+    </ClInclude>
+    <ClInclude Include="pix\pix3_win.h">
+      <Filter>Header files\pix</Filter>
+    </ClInclude>
+    <ClInclude Include="pix\PIXEvents.h">
+      <Filter>Header files\pix</Filter>
+    </ClInclude>
+    <ClInclude Include="pix\PIXEventsCommon.h">
+      <Filter>Header files\pix</Filter>
+    </ClInclude>
+    <ClInclude Include="pix\PIXEventsLegacy.h">
+      <Filter>Header files\pix</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Filter>Resource files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="lib\WinPixEventRuntime.dll">
+      <Filter>Dynamic Libraries</Filter>
+    </CopyFileToFolders>
   </ItemGroup>
 </Project>
