--- a/D3D12Training/D3D12Training.vcxproj
+++ b/D3D12Training/D3D12Training.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="D3DVertexBuffer.cpp" />
     <ClCompile Include="D3DVertexShader.cpp" />
     <ClCompile Include="GameInputs.cpp" />
+    <ClCompile Include="GameMaterial.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_dx12.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_win32.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="DDS.h" />
     <ClInclude Include="GameIncludes.h" />
     <ClInclude Include="GameInputs.h" />
+    <ClInclude Include="GameMaterial.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="imgui\backends\imgui_impl_dx12.h" />
     <ClInclude Include="imgui\backends\imgui_impl_win32.h" />
